[package]
name = "cargo-hublish"
version = "0.1.0"
authors = ["Mathew Robinson <mrobinson@praelatus.io>"]

[dependencies]
getopts = "0.2.14"
serde = "1.0.5"
serde_derive = "1.0.5"
serde_json = "1.0.2"
toml = "0.4.1"
hyper = "0.10.10"
git2 = "0.6.5"
hyper-native-tls = "0.2.2"
ioutil = "*"
base64 = "0.5.2"