[package]
name = "cargo-hublish"
version = "0.2.0"
authors = ["Mathew Robinson <mrobinson@praelatus.io>"]
description = "A cargo subcommand for publishing Rust projects to github."
readme = "./README.md"
license = "Apache-2.0"
repository = "https://github.com/chasinglogic/cargo-hublish"
documentation = "https://github.com/chasinglogic/cargo-hublish/blob/master/README.md"

[dependencies]
getopts = "0.2.14"
serde = "1.0.6"
serde_derive = "1.0.6"
serde_json = "1.0.2"
toml = "0.4.1"
hyper = "0.10.10"
git2 = "0.6.5"
hyper-native-tls = "0.2.2"
ioutil = "0.0.1"
base64 = "0.5.2"